--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "cuid": "^2.1.8",
     "date-fns": "^2.16.1",
+    "firebase": "^7.19.1",
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
@@ -19,9 +20,12 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-toastify": "^6.0.8",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1",
+    "toastify": "^2.0.1",
     "yup": "^0.29.3"
   },
   "scripts": {
