--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -15,6 +16,7 @@
     "formik": "^2.1.5",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-calendar": "^3.1.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.1",
