--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-calendar": "^3.1.0",
+    "react-cropper": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
+    "react-dropzone": "^11.2.0",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
