--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^4.5.2",
     "cuid": "^2.1.8",
     "date-fns": "^2.16.1",
+    "emailjs-com": "^2.6.3",
     "firebase": "^7.19.1",
     "formik": "^2.1.5",
     "lodash": "^4.17.20",
