--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-input-color": "^3.0.1",
+    "react-input-colorpicker": "^1.0.13",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
