--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.2.0",
+    "react-infinite-scroller": "^1.2.4",
     "react-input-color": "^3.0.1",
     "react-input-colorpicker": "^1.0.13",
     "react-redux": "^7.2.1",
