--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "firebase": "^7.19.1",
     "formik": "^2.1.5",
     "lodash": "^4.17.20",
+    "node-forge": "^0.10.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
+    "react-bootstrap": "^1.4.0",
     "react-calendar": "^3.1.0",
     "react-cropper": "^1.3.0",
     "react-datepicker": "^3.1.3",
