added modals for advertising user

--- a/firebase.json
+++ b/firebase.json
@@ -11,6 +11,10 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
-    ]
+    ],
+    "rewrites": [{
+      "source": "**",
+      "destination": "/index.html"
+    }]
   }
 }
