--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-scroll-to-top": "^1.0.5",
     "react-toastify": "^6.0.8",
     "react-vis": "^1.11.7",
     "recharts": "^1.8.5",
